--- a/index.html
+++ b/index.html
@@ -295,147 +295,160 @@ body{
   </td>
 </tr>
 
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%8C%97%E5%B2%B3" class="link">北岳</a></td>
-                    <td>3193</td>
-                    <td>山梨</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQSFrGPap5F0SY5DbYrNdiq-AeSHd6TULAOw_x1svJ1-1QQ?width=6016&height=4016" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQSFrGPap5F0SY5DbYrNdiq-AeSHd6TULAOw_x1svJ1-1QQ?width=6016&height=4016" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQSpX6OaXWe_T6RkExywJ5sdAVlSOqEa4UF5pIMiLHHAja4?width=6016&height=4016" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQSpX6OaXWe_T6RkExywJ5sdAVlSOqEa4UF5pIMiLHHAja4?width=6016&height=4016" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQTjzM403azxTIi4IRZgt97AAbyIV9Ky1NrXeOex5BYY-8w?width=6016&height=4016" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQTjzM403azxTIi4IRZgt97AAbyIV9Ky1NrXeOex5BYY-8w?width=6016&height=4016" width="100">
-                        </a>
-                    </td>
-                </tr>
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E7%A9%82%E9%AB%98%E5%B2%B3" class="link">穂高岳</a></td>
-                    <td>3190</td>
-                    <td>長野/岐阜</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRD0GjjnJClRbuE4oyG_ssSAVvVI1ItaLK1XhP_iwyqSR8?width=4608&height=3072" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRD0GjjnJClRbuE4oyG_ssSAVvVI1ItaLK1XhP_iwyqSR8?width=4608&height=3072" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRRI1jkVLNbRp5Oq_kJNBr_AfenVcTvC2-aM5Aw7rWMhlE?width=4608&height=3072" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRRI1jkVLNbRp5Oq_kJNBr_AfenVcTvC2-aM5Aw7rWMhlE?width=4608&height=3072" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRVUf96x7ApS57etehyd3mXAWfY99CG-7r2a6PRQB5s460?width=4608&height=3072" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRVUf96x7ApS57etehyd3mXAWfY99CG-7r2a6PRQB5s460?width=4608&height=3072" width="100">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E9%96%93%E3%83%8E%E5%B2%B3" class="link">間ノ岳</a></td>
-                    <td>3190</td>
-                    <td>山梨/静岡</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQQxXESxbeETTo3ub8AOUMuEAWRqhUucGxsngsrtf0P8wJ0?width=448&height=336"data-lightbox="group" >
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQQxXESxbeETTo3ub8AOUMuEAWRqhUucGxsngsrtf0P8wJ0?width=448&height=336" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQQl59aLRqocQZaGjkpNV5SGAZH0DMncjSmVyeDD7ObXuGc" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQQl59aLRqocQZaGjkpNV5SGAZH0DMncjSmVyeDD7ObXuGc" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQTpE2sghLXwRa5UiSysZ630AfPIsLL2FgV-eQrgqnztEg8?width=605&height=454" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQTpE2sghLXwRa5UiSysZ630AfPIsLL2FgV-eQrgqnztEg8?width=605&height=454" data-lightbox="group" width="100">
-                        </a>
-                    </td>
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%8C%97%E5%B2%B3" class="link">北岳</a></td>
+  <td>3193</td>
+  <td>山梨</td>
 
-                </tr>
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%A7%8D%E3%83%B6%E5%B2%B3" class="link">槍ケ岳</a></td>
-                    <td>3180</td>
-                    <td>長野/岐阜</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRFGju2t_TWSIfm9LRYJNJUAQGxr_M1nbElZ0WrsMhLjvg?width=4608&height=3072"data-lightbox="group" >
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRFGju2t_TWSIfm9LRYJNJUAQGxr_M1nbElZ0WrsMhLjvg?width=4608&height=3072" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRo8AzYpD7aSIdqnyFGN3J1AdIin6pY0bydTBreDe9Pk0E?width=3840&height=2160" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRo8AzYpD7aSIdqnyFGN3J1AdIin6pY0bydTBreDe9Pk0E?width=3840&height=2160" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQS36dmc7b6EQ5_pblKBqnLwASfiZQzFp0cCsrOJFHT2qyk?width=4608&height=3072" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQS36dmc7b6EQ5_pblKBqnLwASfiZQzFp0cCsrOJFHT2qyk?width=4608&height=3072" data-lightbox="group" width="100">
-                        </a>
-                    </td>
-                </tr>
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E8%8D%92%E5%B7%9D%E5%B2%B3" class="link">荒川岳</a></td>
-                    <td>3141</td>
-                    <td>静岡/長野</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQScdYr5ecq_TrR4JOqv2xSXAZKh5FhJ1zQlxrCO2OAmdsw?width=6000&height=4000"data-lightbox="group" >
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQScdYr5ecq_TrR4JOqv2xSXAZKh5FhJ1zQlxrCO2OAmdsw?width=6000&height=4000" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQQtXqdrScplTrccwHdW7Tb1AeOig616y7hjbeaPpYi_AoI?width=720&height=480" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQQtXqdrScplTrccwHdW7Tb1AeOig616y7hjbeaPpYi_AoI?width=720&height=480" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQQW2uVLpWWCR6RXPboxndYOAc7zobCsrbdumLjdghCEEZU?width=600&height=400" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQQW2uVLpWWCR6RXPboxndYOAc7zobCsrbdumLjdghCEEZU?width=600&height=400" data-lightbox="group" width="100">
-                        </a>
-                    </td>
-                </tr>
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E8%B5%A4%E7%9F%B3%E5%B2%B3" class="link">赤石岳</a></td>
-                    <td>3121</td>
-                    <td>長野/静岡</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRB0OCShWnuQb82AMNGYiaxAZ_ZspEV58D4KnSOpVbL8gA"data-lightbox="group" >
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRB0OCShWnuQb82AMNGYiaxAZ_ZspEV58D4KnSOpVbL8gA" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQQH97T1UsKbQ7bQVDMRUda9Ae8o7AiExk9yjOwi1GyFqt4?width=640&height=480" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQQH97T1UsKbQ7bQVDMRUda9Ae8o7AiExk9yjOwi1GyFqt4?width=640&height=480" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQRJZf2fR_HAQbLb5rNupH3cAYuaNxUXNNwIJSjwhejCa84" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQRJZf2fR_HAQbLb5rNupH3cAYuaNxUXNNwIJSjwhejCa84" data-lightbox="group" width="100">
-                        </a>
-                    </td>
-                </tr>
-                <tr>    
-                    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%BE%A1%E5%B6%BD%E5%B1%B1" class="link">御嶽山</a></td>
-                    <td>3067</td>
-                    <td>長野/岐阜</td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQS6YroFBonUQKiYTOfD4yDFASS8XF5d_S6ITQqT3tsip6w?width=900&height=675"data-lightbox="group" >
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQS6YroFBonUQKiYTOfD4yDFASS8XF5d_S6ITQqT3tsip6w?width=900&height=675" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQTt8HHmcwlYS49c1gJ_MBM7AT2QcagO3U1GGwMT2rBdyR4?width=859&height=602" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQTt8HHmcwlYS49c1gJ_MBM7AT2QcagO3U1GGwMT2rBdyR4?width=859&height=602" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://1drv.ms/i/c/d08f2d187de38be0/IQSMuav2U-NAQLmUCRCKLq0nAYs1bqRlUcpJhaT8A758lmo?width=716&height=512" data-lightbox="group">
-                            <img src="https://1drv.ms/i/c/d08f2d187de38be0/IQSMuav2U-NAQLmUCRCKLq0nAYs1bqRlUcpJhaT8A758lmo?width=716&height=512" data-lightbox="group" width="100">
-                        </a>
-                    </td>
-                </tr>
+  <td>
+    <a href="images/02_北岳/kitadake_001.jpg" data-lightbox="kitadake">
+      <img class="thumb" src="images/02_北岳/kitadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/02_北岳/kitadake_002.jpg" data-lightbox="kitadake">
+      <img class="thumb" src="images/02_北岳/kitadake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/02_北岳/kitadake_003.jpg" data-lightbox="kitadake">
+      <img class="thumb" src="images/02_北岳/kitadake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%A5%A5%E7%A9%82%E9%AB%98%E5%B2%B3" class="link">奥穂高岳</a></td>
+  <td>3190</td>
+  <td>長野/岐阜</td>
+
+  <td>
+    <a href="images/04_奥穂高岳/okuhotakadake_001.jpg" data-lightbox="okuhotakadake">
+      <img class="thumb" src="images/04_奥穂高岳/okuhotakadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/04_奥穂高岳/okuhotakadake_002.jpg" data-lightbox="okuhotakadake">
+      <img class="thumb" src="images/04_奥穂高岳/okuhotakadake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/04_奥穂高岳/okuhotakadake_003.jpg" data-lightbox="okuhotakadake">
+      <img class="thumb" src="images/04_奥穂高岳/okuhotakadake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E9%96%93%E3%83%8E%E5%B2%B3" class="link">間ノ岳</a></td>
+  <td>3190</td>
+  <td>山梨/静岡</td>
+
+  <td>
+    <a href="images/03_間ノ岳/ainodake_001.jpg" data-lightbox="ainodake">
+      <img class="thumb" src="images/03_間ノ岳/ainodake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/03_間ノ岳/ainodake_002.jpg" data-lightbox="ainodake">
+      <img class="thumb" src="images/03_間ノ岳/ainodake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/03_間ノ岳/ainodake_003.jpg" data-lightbox="ainodake">
+      <img class="thumb" src="images/03_間ノ岳/ainodake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%A7%8D%E3%83%B6%E5%B2%B3" class="link">槍ヶ岳</a></td>
+  <td>3180</td>
+  <td>長野/岐阜</td>
+
+  <td>
+    <a href="images/05_槍ヶ岳/yarigatake_001.jpg" data-lightbox="yarigatake">
+      <img class="thumb" src="images/05_槍ヶ岳/yarigatake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/05_槍ヶ岳/yarigatake_002.jpg" data-lightbox="yarigatake">
+      <img class="thumb" src="images/05_槍ヶ岳/yarigatake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/05_槍ヶ岳/yarigatake_003.jpg" data-lightbox="yarigatake">
+      <img class="thumb" src="images/05_槍ヶ岳/yarigatake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E8%8D%92%E5%B7%9D%E5%B2%B3" class="link">荒川岳（悪沢岳）</a></td>
+  <td>3141</td>
+  <td>静岡/長野</td>
+
+  <td>
+    <a href="images/06_荒川岳（悪沢岳）/warusawadake_001.jpg" data-lightbox="warusawadake">
+      <img class="thumb" src="images/06_荒川岳（悪沢岳）/warusawadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/06_荒川岳（悪沢岳）/warusawadake_002.jpg" data-lightbox="warusawadake">
+      <img class="thumb" src="images/06_荒川岳（悪沢岳）/warusawadake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/06_荒川岳（悪沢岳）/warusawadake_003.jpg" data-lightbox="warusawadake">
+      <img class="thumb" src="images/06_荒川岳（悪沢岳）/warusawadake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E8%B5%A4%E7%9F%B3%E5%B2%B3" class="link">赤石岳</a></td>
+  <td>3120</td>
+  <td>長野/静岡</td>
+
+  <td>
+    <a href="images/07_赤石岳/akaishidake_001.jpg" data-lightbox="akaishidake">
+      <img class="thumb" src="images/07_赤石岳/akaishidake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/07_赤石岳/akaishidake_002.jpg" data-lightbox="akaishidake">
+      <img class="thumb" src="images/07_赤石岳/akaishidake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/07_赤石岳/akaishidake_003.jpg" data-lightbox="akaishidake">
+      <img class="thumb" src="images/07_赤石岳/akaishidake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
+<tr>
+  <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%BE%A1%E5%B6%BD%E5%B1%B1" class="link">御嶽山</a></td>
+  <td>3067</td>
+  <td>長野/岐阜</td>
+
+  <td>
+    <a href="images/08_御嶽山/ontakesan_001.jpg" data-lightbox="ontakesan">
+      <img class="thumb" src="images/08_御嶽山/ontakesan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/08_御嶽山/ontakesan_002.jpg" data-lightbox="ontakesan">
+      <img class="thumb" src="images/08_御嶽山/ontakesan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+  <td>
+    <a href="images/08_御嶽山/ontakesan_003.jpg" data-lightbox="ontakesan">
+      <img class="thumb" src="images/08_御嶽山/ontakesan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+    </a>
+  </td>
+</tr>
+
                 <tr>    
                     <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E5%A1%A9%E8%A6%8B%E5%B2%B3" class="link">塩見岳</a></td>
                     <td>3052</td>
@@ -909,3 +922,4 @@ body{
       </div>
 </body>
 </html>
+
