--- a/index.html
+++ b/index.html
@@ -90,11 +90,21 @@ body{
   inset: 0;
   z-index: 1;
   opacity: .55;
+
+  /* 雪結晶SVG */
   background-image:
-    radial-gradient(circle at 10px 10px, rgba(255,255,255,.65) 2px, transparent 4px),
-    radial-gradient(circle at 40px 30px, rgba(255,255,255,.45) 2px, transparent 4px),
-    radial-gradient(circle at 70px 15px, rgba(255,255,255,.35) 2px, transparent 4px);
-  background-size: 120px 60px;
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill='none' stroke='rgba(255,255,255,0.85)' stroke-width='1.6' stroke-linecap='round'%3E%3Cpath d='M16 4v24'/%3E%3Cpath d='M6 10l20 12'/%3E%3Cpath d='M26 10L6 22'/%3E%3Cpath d='M16 8l-2 2M16 8l2 2M16 24l-2-2M16 24l2-2'/%3E%3Cpath d='M9 12l2 0M23 20l-2 0'/%3E%3Cpath d='M23 12l-2 0M9 20l2 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: repeat;
+
+  /* 結晶の大きさ（ここで“粒を大きく”できる） */
+  background-size: 80px 60px;
+
+  /* 位置を少しズラすと「格子感」が減ります */
+  background-position: 0 0;
+
+  animation: heroFloat 6s linear infinite;
+}
+
 
   /* ★ここがポイント：transformじゃなく、背景位置を下に流す */
   animation: snowFall 3.5s linear infinite;
@@ -1040,6 +1050,7 @@ window.addEventListener("DOMContentLoaded", function() {
       </div>
 </body>
 </html>
+
 
 
 
