--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body{
     linear-gradient(135deg, #0b7a53, #0a5e43);
 }
 
-/* ちらちら（背景の点を動かす） */
+/* ちらちら（雪結晶を下に流す） */
 .hero::after{
   content: "";
   position: absolute;
@@ -91,29 +91,23 @@ body{
   z-index: 1;
   opacity: .55;
 
-  /* 雪結晶SVG */
+  /* 雪結晶SVG（タイル） */
   background-image:
     url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill='none' stroke='rgba(255,255,255,0.85)' stroke-width='1.6' stroke-linecap='round'%3E%3Cpath d='M16 4v24'/%3E%3Cpath d='M6 10l20 12'/%3E%3Cpath d='M26 10L6 22'/%3E%3Cpath d='M16 8l-2 2M16 8l2 2M16 24l-2-2M16 24l2-2'/%3E%3Cpath d='M9 12l2 0M23 20l-2 0'/%3E%3Cpath d='M23 12l-2 0M9 20l2 0'/%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
 
-  /* 結晶の大きさ（ここで“粒を大きく”できる） */
-  background-size: 80px 60px;
+  /* 結晶の大きさ：ここを変えるだけで “粒を大きく/小さく” できます */
+  background-size: 64px 48px;
 
-  /* 位置を少しズラすと「格子感」が減ります */
-  background-position: 0 0;
-
-  animation: heroFloat 6s linear infinite;
-}
-
-
-  /* ★ここがポイント：transformじゃなく、背景位置を下に流す */
-  animation: snowFall 3.5s linear infinite;
+  /* 下方向へ流す */
+  animation: snowFall 2.6s linear infinite;
 }
 
 @keyframes snowFall{
-  0%   { background-position: 0 0, 0 0, 0 0; }
-  100% { background-position: 0 80px, 0 120px, 0 160px; }
+  0%   { background-position: 0 -40px; }
+  100% { background-position: 0  40px; }
 }
+
 
 
 /* ========== 季節ごとの雰囲気（色味＋粒の色） ========== */
@@ -1050,6 +1044,7 @@ window.addEventListener("DOMContentLoaded", function() {
       </div>
 </body>
 </html>
+
 
 
 
