--- a/index.html
+++ b/index.html
@@ -83,37 +83,22 @@ body{
     linear-gradient(135deg, #0b7a53, #0a5e43);
 }
 
-/* ちらちら（雪結晶を下に流す） */
-.hero::after{
-  content: "";
+/* ====== Hero上にCanvasを重ねる（雪） ====== */
+#snowCanvas{
   position: absolute;
   inset: 0;
-  z-index: 1;
-  opacity: .55;
-
-  /* 雪結晶SVG（タイル） */
-  background-image:
-    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill='none' stroke='rgba(255,255,255,0.85)' stroke-width='1.6' stroke-linecap='round'%3E%3Cpath d='M16 4v24'/%3E%3Cpath d='M6 10l20 12'/%3E%3Cpath d='M26 10L6 22'/%3E%3Cpath d='M16 8l-2 2M16 8l2 2M16 24l-2-2M16 24l2-2'/%3E%3Cpath d='M9 12l2 0M23 20l-2 0'/%3E%3Cpath d='M23 12l-2 0M9 20l2 0'/%3E%3C/g%3E%3C/svg%3E");
-  background-repeat: repeat;
-
-  /* 結晶の大きさ：ここを変えるだけで “粒を大きく/小さく” できます */
-  background-size: 64px 48px;
-
-  /* 下方向へ流す */
-  animation: snowFall 2.6s linear infinite;
+  width: 100%;
+  height: 100%;
+  z-index: 1;          /* 背景より上、文字より下にしたい */
+  pointer-events: none;
 }
 
-@keyframes snowFall{
-  0%   { background-position: 0 -40px; }
-  100% { background-position: 0  40px; }
+/* 文字は雪より上 */
+.hero-inner{
+  position: relative;
+  z-index: 2;
 }
 
-/* ★冬はCSSの結晶(またはドット)を止めて、JS雪に任せる */
-.hero.season-winter::after{
-  background: none !important;
-  animation: none !important;
-  opacity: 0 !important;
-}
 
 
 /* ========== 季節ごとの雰囲気（色味＋粒の色） ========== */
@@ -349,8 +334,8 @@ window.addEventListener("DOMContentLoaded", function() {
   else hero.classList.add("season-autumn");
 });
 </script>
+
 <script>
-/* ====== 冬だけ：雪Canvas ====== */
 (function () {
   function isWinterMonth() {
     const m = new Date().getMonth() + 1; // 1-12
@@ -362,7 +347,7 @@ window.addEventListener("DOMContentLoaded", function() {
     const canvas = document.getElementById("snowCanvas");
     if (!hero || !canvas) return;
 
-    // 冬以外は何もしない（canvasも隠す）
+    // 冬以外は雪を消す
     if (!isWinterMonth()) {
       canvas.style.display = "none";
       return;
@@ -377,28 +362,47 @@ window.addEventListener("DOMContentLoaded", function() {
       const r = hero.getBoundingClientRect();
       w = Math.max(1, Math.floor(r.width));
       h = Math.max(1, Math.floor(r.height));
-      canvas.width = w;
-      canvas.height = h;
+
+      // 高DPI対策（くっきり）
+      const dpr = Math.max(1, window.devicePixelRatio || 1);
+      canvas.width = Math.floor(w * dpr);
+      canvas.height = Math.floor(h * dpr);
+      canvas.style.width = w + "px";
+      canvas.style.height = h + "px";
+      ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
     }
 
     function rand(min, max) { return Math.random() * (max - min) + min; }
 
-    // 小〜中〜やや大を混ぜる（かわいさの肝）
-    function newFlake() {
-      const size = (Math.random() < 0.70) ? rand(1.0, 2.2)
-                 : (Math.random() < 0.90) ? rand(2.2, 3.6)
-                 : rand(3.6, 5.0);
+    // 大小混在（小多め・中そこそこ・大少し）
+    function pickSize() {
+      const r = Math.random();
+      if (r < 0.70) return rand(1.0, 2.0);   // 小
+      if (r < 0.93) return rand(2.0, 3.2);   // 中
+      return rand(3.2, 4.6);                 // 大（少しだけ）
+    }
 
+    function newFlake(spawnTop = true) {
+      const size = pickSize();
       return {
         x: rand(0, w),
-        y: rand(-h, 0),
+        y: spawnTop ? rand(-h, 0) : rand(0, h),
         r: size,
-        vy: rand(18, 55) / 60,     // 落下速度（小さめ〜中）
-        vx: rand(-10, 10) / 60,    // 横流れ
-        sway: rand(0.6, 2.0),      // 揺れ幅
+
+        // 落下速度：小は遅め、大は少し速め（自然）
+        vy: (size < 2.1 ? rand(10, 22) : size < 3.3 ? rand(18, 32) : rand(26, 44)) / 60,
+
+        // 横流れ（上品に）
+        vx: rand(-8, 8) / 60,
+
+        // ふわっと揺れる（“びくっ”は禁止：sinのみ）
         phase: rand(0, Math.PI * 2),
+        sway: rand(0.4, 1.4),
+
+        // 回転は最小限（不快感防止）
         rot: rand(0, Math.PI * 2),
-        vrot: rand(-0.02, 0.02),   // 回転は“控えめ”（不快になりにくい）
+        vrot: rand(-0.01, 0.01),
+
         alpha: rand(0.35, 0.85)
       };
     }
@@ -406,51 +410,63 @@ window.addEventListener("DOMContentLoaded", function() {
     function init() {
       resize();
       flakes = [];
-      // 量：幅に応じて自動調整（多すぎない上品ライン）
-      const count = Math.min(140, Math.max(50, Math.floor(w / 10)));
-      for (let i = 0; i < count; i++) flakes.push(newFlake());
+
+      // 密度：hero幅に応じて自動（多すぎない）
+      const count = Math.min(120, Math.max(55, Math.floor(w / 12)));
+      for (let i = 0; i < count; i++) flakes.push(newFlake(true));
     }
 
-    // 雪っぽく「結晶感」をちょい足し：小さな十字＋斜め線（描画コスト軽い）
+    // “雪の結晶っぽい” 軽量描画：＋ と × ＋ 先端ちょい
     function drawFlake(f) {
       ctx.save();
       ctx.globalAlpha = f.alpha;
       ctx.translate(f.x, f.y);
       ctx.rotate(f.rot);
 
-      ctx.lineWidth = Math.max(1, f.r / 2.2);
-      ctx.strokeStyle = "rgba(255,255,255,0.85)";
+      ctx.lineWidth = Math.max(1, f.r / 2.3);
+      ctx.strokeStyle = "rgba(255,255,255,0.9)";
+      ctx.lineCap = "round";
 
-      // 中心の線（+ と ×）
+      const r = f.r;
+
       ctx.beginPath();
-      ctx.moveTo(-f.r, 0); ctx.lineTo(f.r, 0);
-      ctx.moveTo(0, -f.r); ctx.lineTo(0, f.r);
-      ctx.moveTo(-f.r * 0.7, -f.r * 0.7); ctx.lineTo(f.r * 0.7, f.r * 0.7);
-      ctx.moveTo(-f.r * 0.7, f.r * 0.7); ctx.lineTo(f.r * 0.7, -f.r * 0.7);
-      ctx.stroke();
+      // + と ×
+      ctx.moveTo(-r, 0); ctx.lineTo(r, 0);
+      ctx.moveTo(0, -r); ctx.lineTo(0, r);
+      ctx.moveTo(-r*0.75, -r*0.75); ctx.lineTo(r*0.75, r*0.75);
+      ctx.moveTo(-r*0.75, r*0.75); ctx.lineTo(r*0.75, -r*0.75);
 
+      // 先端の“トゲ”を少し（大きい粒だけ）
+      if (r > 2.2) {
+        ctx.moveTo(0, -r); ctx.lineTo(-r*0.25, -r*0.75);
+        ctx.moveTo(0, -r); ctx.lineTo(r*0.25, -r*0.75);
+        ctx.moveTo(0, r); ctx.lineTo(-r*0.25, r*0.75);
+        ctx.moveTo(0, r); ctx.lineTo(r*0.25, r*0.75);
+      }
+
+      ctx.stroke();
       ctx.restore();
     }
 
-    let t = 0;
     function tick() {
-      t += 1 / 60;
       ctx.clearRect(0, 0, w, h);
 
       for (const f of flakes) {
-        // ランダム感：ふわっと横揺れ（“びくっ”を避けるためsinだけ）
-        f.phase += 0.01;
+        f.phase += 0.012;
         f.x += f.vx + Math.sin(f.phase) * (f.sway / 60);
         f.y += f.vy;
         f.rot += f.vrot;
 
-        // 画面外に出たら上に戻す
-        if (f.y > h + 10) {
-          f.y = rand(-30, -5);
+        // 下に落ちたら上から復活
+        if (f.y > h + 12) {
+          f.y = rand(-30, -6);
           f.x = rand(0, w);
+          // サイズや速度も少し変えて“完全ランダム感”
+          const nf = newFlake(true);
+          f.r = nf.r; f.vy = nf.vy; f.vx = nf.vx; f.sway = nf.sway; f.alpha = nf.alpha;
         }
-        if (f.x < -10) f.x = w + 10;
-        if (f.x > w + 10) f.x = -10;
+        if (f.x < -12) f.x = w + 12;
+        if (f.x > w + 12) f.x = -12;
 
         drawFlake(f);
       }
@@ -458,17 +474,13 @@ window.addEventListener("DOMContentLoaded", function() {
       rafId = requestAnimationFrame(tick);
     }
 
-    // 初期化＋開始
     init();
     tick();
 
-    // リサイズ対応
-    const ro = new ResizeObserver(() => {
-      init();
-    });
+    // heroサイズが変わったら再生成
+    const ro = new ResizeObserver(() => init());
     ro.observe(hero);
 
-    // ページ離脱時の保険
     window.addEventListener("beforeunload", () => {
       if (rafId) cancelAnimationFrame(rafId);
       ro.disconnect();
@@ -483,24 +495,15 @@ window.addEventListener("DOMContentLoaded", function() {
 </head>
 
 <body>
-    <div class="box">
-        <div class="hero" id="hero">
-  　　　　　<div class="hero-inner">
-    　　　　　　<h1 class="hero-title">日本百名山</h1>
-    　　　　　　<p class="hero-sub">Demo / 社内共有用</p>
-  　　　　</div>
-　　<div class="hero" id="hero">
-  　　　<div class="hero-inner">
-    　　　　<h1 class="hero-title">日本百名山</h1>
-    　　　　<p class="hero-sub">Demo / 社内共有用</p>
- 　　　 </div>
+    <div class="hero" id="hero">
+  <div class="hero-inner">
+    <h1 class="hero-title">日本百名山</h1>
+    <p class="hero-sub">Demo / 社内共有用</p>
+  </div>
 
-  <!-- ★冬だけ使う雪Canvas（他季節は何もしない） -->
+  <!-- ★冬だけ雪を降らせるCanvas -->
   <canvas id="snowCanvas" aria-hidden="true"></canvas>
 </div>
-
-        </div>
-
 
         <table class="table" id="myTable">
             <thead>
@@ -1187,6 +1190,7 @@ window.addEventListener("DOMContentLoaded", function() {
       </div>
 </body>
 </html>
+
 
 
 
