--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body{
 
 /* 中の余白と文字 */
 .hero-inner{
-  padding: 18px 18px 16px;
+  padding: 34px 22px 30px;
   position: relative;
   z-index: 2;
 }
@@ -123,11 +123,11 @@ body{
     radial-gradient(900px 240px at 80% 20%, rgba(255,255,0,.25), transparent 60%),
     linear-gradient(135deg, #2563eb, #0b7a53);
 }
-.hero.season-autumn::before{
+.hero.season-winter::before{
   background:
-    radial-gradient(1200px 220px at 20% 0%, rgba(255,255,255,.35), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(255,165,0,.28), transparent 60%),
-    linear-gradient(135deg, #b45309, #0b7a53);
+    radial-gradient(1200px 220px at 30% 0%, rgba(255,255,255,.55), transparent 60%),
+    radial-gradient(900px 240px at 80% 20%, rgba(225,245,255,.35), transparent 60%),
+    linear-gradient(135deg, #0b3a67, #4fb6e8);
 }
 
 /* ========== テーブル全体 ========== */
@@ -1189,6 +1189,7 @@ window.addEventListener("DOMContentLoaded", function() {
       </div>
 </body>
 </html>
+
 
 
 
